Fix text alignment of facet terms

--- a/src/encoded/static/scss/encoded/modules/_facet.scss
+++ b/src/encoded/static/scss/encoded/modules/_facet.scss
@@ -139,6 +139,7 @@
         align-items: center;
         flex: 1 1 auto;
         align-self: stretch;
+        text-align: left;
         color: #000;
 
         &:hover, &:focus {
